<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/student_fio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/studentNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/student_fio"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/presenceCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/presence_count"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/absenceCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/absence_count"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/excusedAbsenceCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_medium"

        android:text="@string/excusedAbsence"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/averageGradeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_medium"

        android:text="@string/average_grade"
        android:layout_marginBottom="4dp"/>
</LinearLayout>
